TestCases/Errors/Haversine/observations/sst/win_10_obs.spm
obs r15-c5 0.000196232339089482
obs r16-c5 0.000559085323667665
obs r15-c6 1e-08
obs r16-c6 0.000436077900780066
obs r13-c10 0.00214285714285714
obs r14-c10 0.00219265350034581
obs r3-c11 0.00115740740740741
obs r4-c11 0.00590318772136954
obs r14-c11 0.00191666666666667
obs r3-c12 0.00405092592592593
obs r4-c12 0.00887229889164303
obs r6-c17 0.013468286099865
obs r7-c17 0.0115053788351583
obs r8-c17 0.01
obs r9-c17 0.00875
obs r6-c18 0.0142105263157895
obs r7-c18 0.0134177631578947
obs r8-c18 0.00963293650793651
obs r9-c18 0.0136904761904762
obs r8-c19 0.0102301587301587
obs r9-c19 0.0113095238095238
obs r10-c19 0.0129284657996396
obs r11-c19 0.00771632188761047
obs r8-c20 0.0214285714285714
obs r9-c20 0.0105410352148766
obs r10-c20 0.011345091834202
error_value r15-c5 0.2
error_value r16-c5 0.2
error_value r15-c6 0.2
error_value r16-c6 0.2
error_value r13-c10 0.2
error_value r14-c10 0.2
error_value r3-c11 0.2
error_value r4-c11 0.2
error_value r14-c11 0.2
error_value r3-c12 0.2
error_value r4-c12 0.2
error_value r6-c17 0.2
error_value r7-c17 0.2
error_value r8-c17 0.2
error_value r9-c17 0.2
error_value r6-c18 0.2
error_value r7-c18 0.2
error_value r8-c18 0.2
error_value r9-c18 0.2
error_value r8-c19 0.2
error_value r9-c19 0.2
error_value r10-c19 0.2
error_value r11-c19 0.2
error_value r8-c20 0.2
error_value r9-c20 0.2
error_value r10-c20 0.2
